; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/rs6000/extr_rs6000.c_rs6000_sched_finish.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/rs6000/extr_rs6000.c_rs6000_sched_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [25 x i8] c"=== Finishing schedule.\0A\00", align 1
@reload_completed = common dso_local global i64 0, align 8
@rs6000_sched_groups = common dso_local global i64 0, align 8
@rs6000_sched_insert_nops = common dso_local global i64 0, align 8
@sched_finish_none = common dso_local global i64 0, align 8
@sched_finish_pad_groups = common dso_local global i64 0, align 8
@current_sched_info = common dso_local global %struct.TYPE_2__* null, align 8
@.str.1 = private unnamed_addr constant [14 x i8] c"ngroups = %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"Done finish_sched\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @rs6000_sched_finish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rs6000_sched_finish(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 (i32*, i8*, ...) @fprintf(i32* %9, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i64, i64* @reload_completed, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %61

14:                                               ; preds = %11
  %15 = load i64, i64* @rs6000_sched_groups, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %61

17:                                               ; preds = %14
  %18 = load i64, i64* @rs6000_sched_insert_nops, align 8
  %19 = load i64, i64* @sched_finish_none, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %17
  br label %61

22:                                               ; preds = %17
  %23 = load i64, i64* @rs6000_sched_insert_nops, align 8
  %24 = load i64, i64* @sched_finish_pad_groups, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %36

26:                                               ; preds = %22
  %27 = load i32*, i32** %3, align 8
  %28 = load i32, i32* %4, align 4
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_sched_info, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_sched_info, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @pad_groups(i32* %27, i32 %28, i32 %31, i32 %34)
  store i32 %35, i32* %5, align 4
  br label %46

36:                                               ; preds = %22
  %37 = load i32*, i32** %3, align 8
  %38 = load i32, i32* %4, align 4
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_sched_info, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_sched_info, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @redefine_groups(i32* %37, i32 %38, i32 %41, i32 %44)
  store i32 %45, i32* %5, align 4
  br label %46

46:                                               ; preds = %36, %26
  %47 = load i32, i32* %4, align 4
  %48 = icmp sge i32 %47, 6
  br i1 %48, label %49, label %60

49:                                               ; preds = %46
  %50 = load i32*, i32** %3, align 8
  %51 = load i32, i32* %5, align 4
  %52 = call i32 (i32*, i8*, ...) @fprintf(i32* %50, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i32 %51)
  %53 = load i32*, i32** %3, align 8
  %54 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_sched_info, align 8
  %55 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %54, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = call i32 @print_rtl(i32* %53, i32 %56)
  %58 = load i32*, i32** %3, align 8
  %59 = call i32 (i32*, i8*, ...) @fprintf(i32* %58, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  br label %60

60:                                               ; preds = %49, %46
  br label %61

61:                                               ; preds = %21, %60, %14, %11
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, ...) #1

declare dso_local i32 @pad_groups(i32*, i32, i32, i32) #1

declare dso_local i32 @redefine_groups(i32*, i32, i32, i32) #1

declare dso_local i32 @print_rtl(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
